--- a/index.html
+++ b/index.html
@@ -32,11 +32,14 @@
                 <a href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
+    <main>
         <h1>Эффективные решения для вашего бизнеса</h1>
         <button type="button">Заказать услугу</button>
+    </main>
     </header>
     <main>
         <section>
+            <h2> Наши принципы</h2>
             <ul>
                 <li>
                     <h3>Внимание к деталям</h3>
@@ -64,34 +67,26 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <div>
-                        <img src="images/imgigor.jpg" alt="Игорь Демьяненко" width="270" />
-                    </div>
+                    <img src="images/imgigor.jpg" alt="Игорь Демьяненко" width="270" />
                     <h3>Игорь Демьяненко</h3>
                     <p>Product Designer</p>
                 </li>
 
                 <li>
-                    <div>
                         <img src="images/imgolga.jpg" alt="Ольга Репина" width="270" />
-                    </div>
                     <h3>Ольга Репина</h3>
                     <p>Frontend Developer</p>
 
                 </li>
                 <li>
-                    <div>
                         <img src="images/imgnikolya.jpg" alt="Николай Тарасов" width="270" />
-                    </div>
                     <h3>Николай Тарасов</h3>
                     <p>Marketing</p>
 
                 </li>
 
                 <li>
-                    <div>
                         <img src="images/imgmihail.jpg" alt="Михаил Ермаков" width="270" />
-                    </div>
                     <h3>Михаил Ермаков</h3>
                     <p>UI Designer</p>
 
@@ -101,6 +96,7 @@
 
     </main>
     <footer>
+        <a href="">WebStudio</a>
         <address>
             <ul>
                 <li><a href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer">г. Киев, пр-т
