--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -30,14 +34,13 @@
                 <a href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
-        <main>
-            <h1>Эффективные решения для вашего бизнеса</h1>
+             <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
-        </main>
+        
     </header>
     <main>
         <section>
-            <h1>Меню портфолио</h1>
+            <h2>Меню портфолио</h2>
             <button>Все</button>
             <button>Веб-дизайны</button>
             <button>Приложения</button>
