добавлена разметка шрифтов

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,110 +4,111 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="">WebStudio</a>
-            <ul>
-                <li>
-                    <a href="">Студия</a>
+    <header class="header">
+        <nav class="navigation">
+            <a class="link logo" href="">Web<span class="logo-accent">Studio</span></a>
+            <ul class="list nav-list">
+                <li class="nav-list-item">
+                    <a class="link nav-list-link" href="">Студия</a>
                 </li>
-                <li>
-                    <a href="">Портфолио</a>
+                <li class="nav-list-item">
+                    <a class="link nav-list-link" href="">Портфолио</a>
                 </li>
-                <li>
-                    <a href="">Контакты</a>
+                <li class="nav-list-item">
+                    <a class="link nav-list-link" href="">Контакты</a>
                 </li>
             </ul>
         </nav>
-        <ul>
-            <li>
-                <a href="emailto:info@devstudio.com">info@devstudio.com</a>
+        <ul class="list contact-list">
+            <li class="contact-list-item">
+                <a class="link contact-mail" href="emailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="contact-list-item">
+                <a class="link contact-number" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
-             <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
-        
     </header>
     <main>
-        <section>
+        <section class="menu">
             <h2>Меню портфолио</h2>
-            <button>Все</button>
-            <button>Веб-дизайны</button>
-            <button>Приложения</button>
-            <button>Дизайн</button>
-            <button>Маркетинг</button>
+            <button class="menu-btn">Все</button>
+            <button class="menu-btn">Веб-дизайны</button>
+            <button class="menu-btn">Приложения</button>
+            <button class="menu-btn">Дизайн</button>
+            <button class="menu-btn">Маркетинг</button>
         </section>
-        <section>
+        <section class="work">
             <h2>Наши работы</h2>
-            <ul>
-                 <li>
-                    <img src="/images/tehno.jpg" alt="Технокряк" width="370" />
-                    <h3>Технокряк</h3>
-                    <p>Веб-сайт</p>
+            <ul class="list work-content">
+                 <li class="work-content-list">
+                    <img class="work-content-img" src="/images/tehno.jpg" alt="Технокряк" width="370" />
+                    <h3 class="work-name">Технокряк</h3>
+                    <p class="work-type">Веб-сайт</p>
                 </li>
-                <li>
-                    <img src="/images/poster.jpg" alt="Постер" width="370" />
-                    <h3>Постер New Orlean vs Golden Star</h3>
-                    <p>Дизайн</p>
+                <li class="work-content-list">
+                    <img class="work-content-img" src="/images/poster.jpg" alt="Постер" width="370" />
+                    <h3 class="work-name">Постер New Orlean vs Golden Star</h3>
+                    <p class="work-type">Дизайн</p>
                 </li>
-                <li>
-                    <img src="/images/restoran.jpg" alt="Ресторан" width="370" />
-                    <h3>Ресторан Seafood</h3>
-                    <p>Приложение</p>
+                <li class="work-content-list">
+                    <img class="work-content-img" src="/images/restoran.jpg" alt="Ресторан" width="370" />
+                    <h3 class="work-name">Ресторан Seafood</h3>
+                    <p class="work-type">Приложение</p>
                 </li>
-                <li>
-                    <img src="/images/Prime.jpg" alt="Проект Прайм" width="370" />
-                    <h3>Проект Prime</h3>
-                    <p>Маркетинг</p>
+                <li class="work-content-list">
+                    <img class="work-content-img" src="/images/Prime.jpg" alt="Проект Прайм" width="370" />
+                    <h3 class="work-name">Проект Prime</h3>
+                    <p class="work-type">Маркетинг</p>
                 </li>
-                <li>
-                    <img src="/images/Boxes.jpg" alt="Проект Упаковка" width="370" />
-                    <h3>Проект Boxes</h3>
-                    <p>Приложение</p>
+                <li class="work-content-list">
+                    <img class="work-content-img" src="/images/Boxes.jpg" alt="Проект Упаковка" width="370" />
+                    <h3 class="work-name">Проект Boxes</h3>
+                    <p class="work-type">Приложение</p>
                 </li>
-                <li>
-                    <img src="/images/Inspiration.jpg" alt="Инспирация" width="370" />
-                    <h3>Inspiration has no Borders</h3>
-                    <p>Веб-сайт</p>
+                <li class="work-content-list">
+                    <img class="work-content-img" src="/images/Inspiration.jpg" alt="Инспирация" width="370" />
+                    <h3 class="work-name">Inspiration has no Borders</h3>
+                    <p class="work-type">Веб-сайт</p>
                 </li>
-                <li>
-                    <img src="/images/Limited.jpg" alt="Издание" width="370" />
-                    <h3>Издание Limited Edition</h3>
-                    <p>Дизайн</p>
+                <li class="work-content-list">
+                    <img class="work-content-img" src="/images/Limited.jpg" alt="Издание" width="370" />
+                    <h3 class="work-name">Издание Limited Edition</h3>
+                    <p class="work-type">Дизайн</p>
                 </li>
-                <li>
-                    <img src="/images/LAB.jpg" alt="Проект ЛАБ" width="370" />
-                    <h3>Проект LAB</h3>
-                    <p>Маркетинг</p>
+                <li class="work-content-list">
+                    <img class="work-content-img" src="/images/LAB.jpg" alt="Проект ЛАБ" width="370" />
+                    <h3 class="work-name">Проект LAB</h3>
+                    <p class="work-type">Маркетинг</p>
                 </li>
-                <li>
+                <li class="work-content-list">
                     <img src="/images/Growing.jpg" alt="Бизнес" width="370" />
                     <h3>Growing Business</h3>
-                    <p>Приложение</p>
+                    <p class="work-type">Приложение</p>
                 </li>
             </ul>
 
         </section>
         
     </main>
-    <footer>
-        <a href="">WebStudio</a>
-        <address>
-            <ul>
-                <li><a href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer">г. Киев, пр-т
+<! Footer !>
+    <footer class="footer">
+        <a class="link logo" href="">Web<span class="logo-accent-color">Studio</span></a>
+        <address class="address">
+            <ul class="list address-list">
+                <li class="address-list-item"><a class="link address-list-nav" href="https://bit.ly/3pXMvUd"
+                        target="_blank" rel="noopener noreferrer">г. Киев, пр-т
                         Леси Украинки, 26</a> </li>
-                <li><a class="link" href="mailto:info@example.com">info@example.com</a> </li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a> </li>
+                <li class="address-list-item"><a class="link address-list-link" class="link"
+                        href="mailto:info@example.com">info@example.com</a> </li>
+                <li class="address-list-item"><a class="link address-list-link" href="tel:+380961111111">+38 096 111 11
+                        11</a> </li>
             </ul>
         </address>
     </footer>
