--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <a class="link nav-list-link" href="">Студия</a>
                 </li>
                 <li class="nav-list-item">
-                    <a class="link nav-list-link" href="">Портфолио</a>
+                    <a class="link nav-list-link" href="./portfolio.html">Портфолио</a>
                 </li>
                 <li class="nav-list-item">
                     <a class="link nav-list-link" href="">Контакты</a>
