--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
             <a class="link logo" href="">Web<span class="logo-accent">Studio</span></a>
             <ul class="list nav-list">
                 <li class="nav-list-item">
-                    <a class="link nav-list-link" href="">Студия</a>
+                    <a class="link nav-list-link" href="./index.html">Студия</a>
                 </li>
                 <li class="nav-list-item">
                     <a class="link nav-list-link" href="">Портфолио</a>
